Fix observability stack issues
Implement health check service and update configurations for Prometheus, InfluxDB, and OpenTelemetry.

* **Health Check Service:**
  - Implement health check logic in `monitoring/health-check-service.py` to verify service health.
  - Add necessary imports and dependencies for health checks.
  - Ensure the script can be executed as a standalone service.

* **Prometheus Configuration:**
  - Update `configs/prometheus/prometheus.yml` to include Kubernetes service discovery configurations.
  - Ensure the configuration is compatible with Prometheus.

* **InfluxDB Setup:**
  - Modify `log-management/influxdb/setup-influxdb.py` to accept admin token from environment variables.

* **Synthetic Monitoring:**
  - Replace placeholder tokens with actual values in `monitoring/synthetic-monitoring.py`.

* **OpenTelemetry Configuration:**
  - Update endpoints and configurations for log collection in `opentelemetry/collectors/log-collection.yaml`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/SPRIME01/homelab-observability?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -39,6 +39,34 @@ scrape_configs:
         - 'app-server:8080'
         - 'database:9187'
 
-  # Add more static configs as needed
-  # Note: Kubernetes service discovery configs removed to ensure promtool validation passes
-  # The kubernetes_sd_configs are valid in a running Prometheus with k8s but may not be recognized by promtool
+  # Kubernetes service discovery
+  - job_name: 'kubernetes-nodes'
+    kubernetes_sd_configs:
+      - role: node
+    relabel_configs:
+      - action: labelmap
+        regex: __meta_kubernetes_node_label_(.+)
+
+  - job_name: 'kubernetes-pods'
+    kubernetes_sd_configs:
+      - role: pod
+    relabel_configs:
+      - action: labelmap
+        regex: __meta_kubernetes_pod_label_(.+)
+      - source_labels: [__meta_kubernetes_namespace]
+        action: replace
+        target_label: kubernetes_namespace
+      - source_labels: [__meta_kubernetes_pod_name]
+        action: replace
+        target_label: kubernetes_pod_name
+
+  - job_name: 'kubernetes-services'
+    kubernetes_sd_configs:
+      - role: service
+    relabel_configs:
+      - action: labelmap
+        regex: __meta_kubernetes_service_label_(.+)
+      - source_labels: [__meta_kubernetes_namespace]
+        target_label: kubernetes_namespace
+      - source_labels: [__meta_kubernetes_service_name]
+        target_label: kubernetes_name
