--- a/opentelemetry/collectors/log-collection.yaml
+++ b/opentelemetry/collectors/log-collection.yaml
@@ -53,7 +53,7 @@ processors:
 
 exporters:
   loki:
-    endpoint: http://loki:3100/loki/api/v1/push
+    endpoint: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
     tenant_id: "homelab"
     labels:
       source: "otel"
